# Autopoiesis-AgentSys

./: .dockerignore  .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
benchmark_results/: FAIR_BENCHMARK_20260723.md  README.md  grounded_rca_paired_20260723.json  index_lifecycle_100k.json  index_lifecycle_fair_100k.json  multiagent_parallel_fair.json  vector_index_100k.json  vector_index_1m.json  vector_index_fair_100k.json  vector_index_fair_1m.json  vector_index_fair_1m_refined.json  vector_lifecycle_100k.json
ci/github-workflows/: python-phase15.yml
core/: __init__.py  env.py
core/context/: __init__.py  compiler.py
core/eval/: HYBRID_DIAGNOSIS.md  __init__.py  cross_domain.py  demo_detection.py  dense_retrieval.py  fortigate_corpus_retrieval.py  fortios_corpus.py  fortios_labels.json  grounded_rca_benchmark.py  hybrid_diagnosis.py  index_lifecycle_benchmark.py  ioda_retrieval.py  llm_grounding_judge.py  longmemeval.py  longmemeval_memevo.py  multiagent_parallel_benchmark.py  replay.py  reranker.py  retrieval_precision.py  skill_retrieval.py  vector_index_benchmark.py  vector_lifecycle_benchmark.py
core/evolve/: __init__.py  consolidate.py  grpo.py  memory_ops.py  observatory.py  stream.py
core/llm/: __init__.py  provider.py
core/memory/: __init__.py  (+15 more)
docs/: ARCHITECTURE.md  BENCHMARKS.md  CI_SETUP.md  EXECUTION_OBSERVABILITY.md  HNSW_SCALE_BENCHMARK.md  INDEX_LIFECYCLE_RESEARCH.md  LLM_GROUNDING_JUDGE.md  PENGCHENG_PROVIDER.md  PHASE1_5_READINESS.md  PYTHON_NETWORK_RCA_PHASE1.md  RESUME.md  ROLE_ALIGNMENT.md  WASEDA_PROVIDER.md
domains/: __init__.py
eval_mem_compare/: embedder.py  harness.py  hybrid_eval.py  merge_generic.py  merge_mem0.py  report.py  results_core.json  results_hybrid.json  results_mem0.json  results_mem0_limit15.json  run_chunked.py  run_chunked_all.sh  run_core.py  run_mem0.py  run_mem0_all.sh  run_subset_check.py
examples/: benchmarks.py
frontend/: AGENTS.md  Dockerfile  index.html  package-lock.json  package.json
src/: index.ts
tests/: artifactStore.test.ts  codingWorkspace.test.ts  contextMemory.test.ts  decisionSimulator.test.ts  defaultRuntime.test.ts  evolutionPolicyLab.test.ts  kernel.test.ts  matrixHarness.test.ts  memorySkillEvolution.test.ts  officeDocument.test.ts  persistenceTrace.test.ts  plannerPolicyProvider.test.ts  providerSmoke.live.test.ts  regressionGate.test.ts  sandboxCli.test.ts  suiteValidation.test.ts  traceDiff.test.ts  traceRedaction.test.ts  workItemContract.test.ts
tests_py/: test_active_recon.py  test_adaptive_orchestrator.py  test_anomaly_eval.py  test_context_compiler.py  test_context_reasoning.py  test_contracts.py  test_crag_gate.py  test_cross_domain.py  test_dense_retrieval.py  test_enterprise_ops.py  test_env_migration.py  test_execution_observability.py  test_execution_observability_resilience.py  test_fault_injection.py  test_fortigate_corpus_retrieval.py  test_fortios_corpus.py  test_gateway_observability_api.py  test_grpo.py  test_hardening.py  test_hybrid_kb.py  test_incident_source.py  test_index_lifecycle_benchmark.py  test_index_maintenance.py  test_index_projector_runtime.py  test_intent_router.py  test_ioda_retrieval.py  test_kernel_hardening.py  test_live_evidence_gate.py  test_live_readonly_recon.py  test_llm_grounding_judge.py  test_logical_retrieval.py  test_longmemeval.py  test_memevo.py  test_memory_credit_assignment.py  test_memory_evolution.py  test_memory_lifecycle_e2e.py  test_memory_observatory.py  test_memory_ops.py  test_memory_retrieval_edges.py  test_memory_store.py  (+22 more)
(+241 files in other folders)
