[project]
name = "selfevo-network-rca"
version = "0.1.0"
description = "Python Phase 0-1 implementation for a trace-backed self-evolving agent framework and network RCA seed domain."
requires-python = ">=3.11,<3.12"
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
ingestor = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]
# OPTIONAL, eval-only. The deterministic core stays LLM-free and zero-dependency;
# this extra powers ONLY the dense/embedding retrieval BASELINE in core.eval.dense_retrieval,
# which is a comparison baseline and is never imported from the online RCA path or the
# default (non-dense) test path. Install into a dedicated venv, e.g.:
#   python3 -m venv .venv-dense && . .venv-dense/bin/activate
#   pip install sentence-transformers faiss-cpu torch
dense = [
  "sentence-transformers>=2.2",
  "faiss-cpu>=1.7",
  "torch>=2.0",
]
# OPTIONAL, eval-only. Powers ONLY the cross-encoder reranker BASELINE in
# core.eval.reranker (two-stage retrieval eval: BM25/dense first stage + CrossEncoder
# rerank). Like `dense`, it is never imported from the online RCA path or the default
# (non-dense) test path; new tests importorskip it. The CrossEncoder ships with
# sentence-transformers, so this reuses that dep; torch is its runtime. The public
# BEIR SciFact benchmark it evaluates on is downloaded with the stdlib (no extra pkg).
#   pip install sentence-transformers torch     # (already present in .venv-dense)
rerank = [
  "sentence-transformers>=2.2",
  "torch>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests_py"]
pythonpath = ["."]
