[project]
name = "autopoiesis-agent-sys"
version = "0.1.0"
description = "Python Phase 0-1 implementation for a trace-backed self-evolving agent framework and network RCA seed domain."
requires-python = ">=3.11,<3.12"
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]
ingestor = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[tool.pytest.ini_options]
testpaths = ["tests_py"]
pythonpath = ["."]
